<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroundprofile"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="Register"
                android:gravity="center"
                android:textSize="25dp"
                android:textColorHint="#FFFF"
                android:fontFamily="sans-serif-black"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/form_name"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/fdNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textColorLink="@color/fdForm"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/form_jenisKelamin"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/dropjenisKelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="20dp"
            android:entries="@array/jenisKelamin"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/form_umur"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/fdUmur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:textColorLink="@color/fdForm"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/form_email"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/fdEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textEmailAddress"
            android:textColorLink="@color/fdForm"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/form_telp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/fdnoTelpon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:textColorLink="@color/fdForm"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/form_alamat"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/fdAlamat"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:textColorLink="@color/fdForm"/>

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/btn_simpan"
            android:textSize="20dp"
            android:textColorHint="#fff"
            android:background="@drawable/roundedbuttonsave"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="Buat Akun"
            android:textSize="20dp"
            android:textColorHint="#fff"
            android:background="@drawable/roundedbuttonsave"/>

    </LinearLayout>
</ScrollView>